added draft of lakes endpoints
